--- a/Front-End/src/app/home/home.component.html
+++ b/Front-End/src/app/home/home.component.html
@@ -1,41 +1,3 @@
-<!--Navbar-->
-<nav class="navbar navbar-expand-sm fixed-top">
-    <a class="navbar-brand" href="#">Livraria Abraço</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-        aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">HOME <span class="sr-only">(página atual)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">LOJA</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">SOBRE NÓS</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">CONTATOS</a>
-            </li>
-
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">LOGIN</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">CADASTRO</a>
-            </li>
-
-        </ul>
-
-    </div>
-</nav>
-<!--/Navbar-->
-
 <!--Carrossel-->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -47,15 +9,15 @@
         <div class="carousel-item active">
             <!--TAMANHO-DE-IMAGEM-1280x568-->
             <img class="d-block w-100" src="https://i.imgur.com/lfu8aEn.jpg" alt="Primeiro Slide" width="1280"
-                height="700">
+                height="757">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="https://i.imgur.com/vYNcgGD.jpg" alt="Segundo Slide" width="1280"
-                height="700">
+                height="757">
         </div>
         <div class="carousel-item">
             <img class="d-block w-100" src="https://i.imgur.com/gUfdkjr.jpg" alt="Terceiro Slide" width="1280"
-                height="700">
+                height="757">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -69,14 +31,13 @@
 </div>
 <!--/Carrossel-->
 
-
+  <!--Jumbotron-->
 <div class="md-col-12">
-    <!--Jumbotron-->
     <div class="jumbotron ">
         <div class="row imagemMenininha">
             <div class="col-md-8">
                 <h1 class="display-4 d-flex justify-content-center ">Apoie a Nossa causa!</h1>
-                <div class="text-center ">
+                <div class="text-center color">
                     <p class="lead">Mussum Ipsum, cacilds vidis litro abertis. Nec orci ornare consequat. Praesent
                         lacinia
                         ultrices consectetur. Sed non ipsum felis. Admodum accumsan disputationi eu sit.
@@ -95,76 +56,152 @@
     <!--/Jumbotron-->
 </div>
 
+<hr class="hrPontilhado">
 <!--Produtos em destaque-->
 <div class="md-col-12">
-    <h2 class="oQueFazemos text-center">Produtos em destaque</h2>
+    <h2 class="oQueFazemos text-center">PRODUTOS EM ESTOQUE</h2>
 </div>
 <hr class="hrMenor">
 
 <!--/Produtos em destaque-->
 
 
-<!--Carousel-->
+<!--Carousel de cards-->
 <div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <div class="row">
+    
+    <!--Carousel Wrapper-->
+    <div id="multi-item-example" class="carousel slide carousel-multi-item " data-ride="carousel">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <!--Slides-->
+      <div class="carousel-inner" role="listbox">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png"
-                            alt="Primeiro Slide">
-                    </div>
+        <!--First slide-->
+        <div class="carousel-item">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/Vkw7kZG.png"
-                            alt="Primeiro Slide">
-                    </div>
+          <div class="row d-flex justify-content-center">
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
+            
+            <div class="col-md-3 ">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/VMYSj2p.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
                 </div>
+              </div>
             </div>
-            <div class="carousel-item">
-                <div class="row">
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/06WlUVI.png"
-                            alt="Primeiro Slide">
-                    </div>
 
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
-
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/GjszAsI.jpg"
-                            alt="Primeiro Slide">
-                    </div>
-
-                    <div class="col-3"><img class="d-block w-100" src="https://i.imgur.com/EA1v0xb.jpg"
-                            alt="Primeiro Slide">
-                    </div>
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/GJzoBXp.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
                 </div>
+              </div>
             </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+              <div class="card mb-2 tamanhoCard">
+                <img class="card-img-top" src="https://i.imgur.com/KoatrYj.jpeg" alt="Card image cap">
+                <div class="corpo-card">
+                  <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                  <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2 tamanhoCard">
+                  <img class="card-img-top" src="https://i.imgur.com/xQmh2Pn.jpeg" alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                  </div>
+                </div>
+              </div>
+          </div>
+
         </div>
-        <div class="container d-flex justify-content-between">
-            <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-                <span class="sr-only">Anterior</span>
-            </a>
+        <!--/.First slide-->
 
-            <a class="btn btn-info" href="#carouselExampleControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Próximo</span>
-            </a>
-        </div>
+        <!--First slide-->
+        <div class="carousel-item active ">
 
+            <div class="row d-flex justify-content-center">
+              <div class="col-md-3">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(47).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/City/4-col/img%20(48).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk</p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>                    
+                  </div>
+                </div>
+              </div>
 
+              <div class="col-md-3 clearfix d-none d-md-block">
+                <div class="card mb-2">
+                  <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Food/4-col/img%20(53).jpg"
+                    alt="Card image cap">
+                  <div class="corpo-card">
+                    <h4 class="titulo-card d-flex justify-content-center">Card title</h4>
+                    <p class="texto-card">Some quick example text to build on the card title and make up the bulk </p>                    
+                  </div>
+                </div>
+              </div>
+            </div>
+  
+          </div>
+          <!--/.First slide-->
+      </div>
+      <!--/.Slides-->
+
+      </div>
+      
+      <!--Controls-->
+      <!-- <div class="d-flex justify-content-center topmargin-10">
+        <a class="button" href="#multi-item-example" data-slide="prev"><i class="fa fa-chevron-left"> < </i></a>
+        <a class="button" href="#multi-item-example" data-slide="next"><i class="fa fa-chevron-right"> > </i></a>
+      </div> -->
+      <a class="carousel-control-prev botaoCardsPrev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next botaoCardsNext" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+      </a>
+      <!--/.Controls-->
     </div>
+    <!--/.Carousel Wrapper-->
+  </div>
 
-</div>
-<!--/Carousel-->
+
+<!--/Carousel cards-->
 
 
 
@@ -247,12 +284,12 @@
 </div>
 
 
-<div class="container d-flex justify-content-between">
-    <div class="col-md-6">
-        <img src="https://i.imgur.com/cFyuOd5.jpg" alt="" width="300px" height="330px">
+<div class="container d-flex align-items-center">
+    <div class="col-md-6 d-flex justify-content-center">
+        <img src="https://i.imgur.com/byTmZst.jpg" alt="" width="50%" height="50%">
     </div>
-    <div class="col-md-6 margemFazemos">
-        <p class="texto-direita"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis
+    <div class="col-md-4 ">
+        <p class=""> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum explicabo debitis
             laborum
             facere dolore.
             Accusantium magnam aspernatur reiciendis vel consectetur adipisci, iusto quibusdam aut mollitia, recusandae
@@ -265,23 +302,3 @@
 <!--/Nossos Parceiros-->
 
 
-<!--Rodapé-->
-<hr>
-<footer>
-    <div class="container">
-        <div class="row mb-3">
-            <div class="col-md-12 d-flex justify-content-center">
-                <a href="https://www.instagram.com/guhh.rabelo/" target="_blank" class="p-2">
-                    <img class="tm-social" src="assets/img/instagram.png" alt="Logo instagram">
-                </a>
-            </div>
-        </div>
-
-        <div class="col-md-12">
-            <p class="text-center">
-                Todos os direitos reservados: Projeto Livraria Abraço
-            </p>
-        </div>
-    </div>
-</footer>
-<!--/Rodapé-->
