Finalização fase 1 do projeto.

--- a/Front-End/src/app/app.component.html
+++ b/Front-End/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>LIVRARIA ABRAÇO</h1>
+<app-navbar *ngIf='auth.tipoDeUsuarioLogado() == ""'></app-navbar>
+
+<app-admnavbar *ngIf='auth.tipoDeUsuarioLogado() == "adm"'></app-admnavbar>
+
+<app-usernavbar *ngIf='auth.tipoDeUsuarioLogado() == "normal"'></app-usernavbar>
+
+<router-outlet></router-outlet>
+
+<app-rodape></app-rodape>
