--- a/Front-End/src/styles.css
+++ b/Front-End/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+.html{
+    scroll-behavior: smooth;
+}
+
+* {
+    font-family: 'Montserrat', sans-serif;
+}
+
+p {
+    font-size: 2vh;
+}
